# PennyLaneToEinsum

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  guide.md  pyproject.toml
.github/workflows/: ci.yml
converter/: __init__.py
docs/: batching.md  benchmarks.md  implementation.md  review.md
docs/benchmarks/: batch_contraction.csv  batch_conversion.csv  pennylane_convert_large_circuits.csv
docs/superpowers/plans/: 2026-03-29-pennylane-einsum-package-cleanup.md
docs/superpowers/specs/: 2026-03-29-pennylane-einsum-package-cleanup-design.md
examples/: basic_circuits.py
pennylane_einsum/: __init__.py  circuit_to_einsum.py  exceptions.py  index_manager.py
scripts/: benchmark_batch_contraction.py  benchmark_batch_conversion.py  benchmark_pennylane_convert.py  scan_unsupported_ops.py
tests/: test_batched_parameters.py  test_expectation.py  test_method_one_basic.py  test_multiqubit_gates.py  test_qk_learnob_integration.py  test_torch_expval.py  test_unsupported_ops.py  test_wire_semantics.py
