[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pennylane-einsum"
version = "0.1.0"
description = "Convert PennyLane circuits to einsum expressions."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "gilbert", email = "gilbert12.tw@gmail.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "pennylane>=0.37",
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "opt_einsum>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/gilbert/pennylane-einsum"
Repository = "https://github.com/gilbert/pennylane-einsum"

[tool.setuptools.packages.find]
where = ["."]
include = ["pennylane_einsum*"]
